# IEEE_SB_Passau_advent_2016

./: 01_budget.cpp  02_calculation.cpp  02_calculation.py  03_tree.py  04_party_preparations.cpp  05_weekday.cpp  05_weekday.py  06_cache_me_if_you_can.py  07_christmas_illumination.cpp  08_present_wrapping_machine.py  09_make_a_gift_together.py  10_christmas_tree_decoration.py  11_setting_parentheses.py  13_a_long_way_from_home.py  14_santa_4.0.py  15_sequence_hunting.py  16_amortisation_table.py  17_gpsanta.cpp  17_gpsanta.py  17_gpsanta_explicit.py  18_wish_list.py  19_christmas_greetings.py  20_15_puzzle.py  21_collision_ahead.cpp  21_collision_ahead.py  22_roadtrip.py  23_broken_skids.py  24_sleigh_forest.py  CMakeLists.txt  README.md
samples/: 02.1_input.txt  04.1_input.txt  04.2_input.txt  04.3_input.txt  05.1_input.txt  05.2_input.txt  05.3_input.txt  06.1_input.txt  06.2_input.txt  06.3_input.txt  06.4_input.txt  07.1_input.txt  08.1_input.txt  08.2_input.txt  09.2_input.txt  10.1_input.txt  11.1_input.txt  13.1_input.txt  14.1_input.txt  15.1_input.txt  16.1_input.txt  17.1_input.txt  18.1_devel.txt  18.1_input.txt  19.1_input.txt  20.1_input.txt  21.1_input.txt  22.1_input.txt  23.1_input.txt  23.2_input.txt  24.1_input.txt
